# TheMask

./: CMakeLists.txt  README.md
src/: MaskingASTVisitor.cpp  MaskingASTVisitor.h  MaskingFrontendAction.cpp  MaskingFrontendAction.h  SMTMasker.cpp  SMTMasker.h  SensitiveVariableFinder.cpp  SensitiveVariableFinder.h  Verifier.cpp  Verifier.h  main.cpp
test/: input.c  input2.c  input_masked.c
